# Brain_Murilo

./: .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
artifacts/: training_history.csv
reports/: classification_report.txt  confusion_matrix.csv
src/brain_mri_triage/: __init__.py  app.py  config.py  dashboard.py  grad_cam.py  history.py  predict.py  report.py  rules.py
